# LANChat

./: .gitignore  AGENTS.md  DEBUG-FILE-TRANSFER.md  README.md  SIMPLE-FILE-UPLOAD-FIX.md  WEB_DEPLOYMENT.md  WEB_USAGE_GUIDE.md  build-android.sh  build-portable-appimage.sh  build-web.sh  build-windows.sh  debug-desktop-file-receive.sh  debug-file-transfer.md  diagnose-ports.sh  sign-apk.sh  start-web.sh  test-both-upload.sh  test-desktop-message.sh  test-file-message-display.md  test-file-send.md  test-file-transfer.sh  test-file-upload-immediate.md  test-simple-upload.html  test-upload-api.sh  test-web-api.sh  test-web-to-desktop.sh  verify-build.sh
src/: index.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  mobile.json
src-tauri/permissions/: android-share-out.toml  android-share.toml  commands.toml  main.toml
src-tauri/src/: android_fd.rs  commands.rs  db.rs  lib.rs  main.rs  models.rs  peers.rs  server_main.rs  utils.rs  web_server.rs
src-tauri/src/network/: discovery.rs  messaging.rs  mod.rs
src/css/: style.css  vscode.css
src/js/: api.js  app.js  ui.js
