[package]
name = "lanchat"
version = "0.1.0"
edition = "2021"
default-run = "lanchat"

[lib]
name = "lanchat" 

# 定义两个独立的二进制入口
[[bin]]
name = "lanchat"
path = "src/main.rs"

[[bin]]
name = "lanchat-web"
path = "src/server_main.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# 核心
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-sql = { version = "2.0", features = ["sqlite"] }
tauri-plugin-log = "2.0"
log = "0.4" # 修复编译错误

# 数据库
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }

# Web 服务器
axum = "0.7"
tower-http = { version = "0.5", features = ["fs", "cors"] }
clap = { version = "4.4", features = ["derive"] }
rust-embed = "8.0" # 用于打包前端资源

# 工具
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
mime_guess = "2.0.5"
socket2 = { version = "0.5", features = ["all"] }
directories = "5.0"


