[package]
name = "lanchat"
version = "0.1.0"
edition = "2021"
default-run = "lanchat"

[lib]
name = "lanchat" 

# 定义两个独立的二进制入口
[[bin]]
name = "lanchat"
path = "src/main.rs"
required-features = ["desktop"]

[[bin]]
name = "lanchat-web"
path = "src/server_main.rs"
required-features = ["web"]

[features]
default = ["desktop"]
desktop = ["tauri", "tauri-plugin-shell", "tauri-plugin-fs", "tauri-plugin-dialog", "tauri-plugin-sql", "tauri-plugin-log", "tauri-build"]
web = []

[build-dependencies]
tauri-build = { version = "2.0", features = [], optional = true }

[dependencies]
# 核心 - 仅桌面端需要
tauri = { version = "2.0", features = [], optional = true }
tauri-plugin-shell = { version = "2.0", optional = true }
tauri-plugin-fs = { version = "2.0", optional = true }
tauri-plugin-dialog = { version = "2.0", optional = true }
tauri-plugin-sql = { version = "2.0", features = ["sqlite"], optional = true }
tauri-plugin-log = { version = "2.0", optional = true }
log = "0.4"

# 数据库 - 两端都需要
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros"] }

# Web 服务器 - 两端都需要
axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
clap = { version = "4.4", features = ["derive"] }
rust-embed = "8.0"

# 工具 - 两端都需要
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"
mime_guess = "2.0.5"
socket2 = { version = "0.5", features = ["all"] }
directories = "5.0"
reqwest = { version = "0.12", features = ["multipart", "json"] }


